# ChangeLog for dev-python/twisted-core
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/twisted-core/ChangeLog,v 1.7 2013/08/26 01:32:52 floppym Exp $

  26 Aug 2013; Mike Gilbert <floppym@gentoo.org> twisted-core-13.0.0-r2.ebuild:
  Make previous change PyPy-compatible.

*twisted-core-13.0.0-r2 (26 Aug 2013)

  26 Aug 2013; Mike Gilbert <floppym@gentoo.org> +twisted-core-13.0.0-r2.ebuild,
  -twisted-core-13.0.0-r1.ebuild:
  Install missing egg-info file, bug 428478.

  23 Aug 2013; Jeroen Roovers <jer@gentoo.org> twisted-core-12.3.0.ebuild:
  Stable for HPPA (bug #468150).

  09 Aug 2013; Michał Górny <mgorny@gentoo.org> twisted-core-13.0.0-r1.ebuild:
  Fix python_prepare_all() call order.

*twisted-core-13.0.0-r1 (09 Aug 2013)

  09 Aug 2013; Michał Górny <mgorny@gentoo.org> +twisted-core-13.0.0-r1.ebuild:
  Migrate to twisted-r1.

  06 Aug 2013; Michał Górny <mgorny@gentoo.org> twisted-core-12.2.0.ebuild,
  twisted-core-12.3.0.ebuild, twisted-core-13.0.0.ebuild:
  Fix patch paths. Bug #479942.

*twisted-13.0.0 (08 Apr 2013)

  08 Apr 2013; Patrick Lauer <patrick@gentoo.org> +twisted-13.0.0.ebuild:
  Bump

*twisted-12.3.0 (14 Jan 2013)

  14 Jan 2013; Patrick Lauer <patrick@gentoo.org> +twisted-12.3.0.ebuild:
  Bump

  08 Jan 2013; Mike Gilbert <floppym@gentoo.org> files/twistd.init:
  Remove bashism, #450806 by kensington.

  08 Oct 2012; Marien Zwart <marienz@gentoo.org> twisted-12.2.0.ebuild:
  Tighten python version dependency (spotted by Arfrever).

  05 Oct 2012; Marien Zwart <marienz@gentoo.org> twisted-10.2.0.ebuild,
  twisted-11.0.0.ebuild:
  Restrict pypy in twisted < 11.1.0 (bug #420653).

*twisted-12.2.0 (27 Sep 2012)

  27 Sep 2012; Marien Zwart <marienz@gentoo.org>
  +files/twisted-12.1.0-remove-tests-conch-dependency.patch,
  +twisted-12.2.0.ebuild:
  Bump to 12.2.0 (bug #423777) with some test-related ebuild improvements.
