@@ -1,6 +1,6 @@
 # Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/twisted-core/twisted-core-13.0.0-r2.ebuild,v 1.3 2013/08/26 01:32:52 floppym Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/twisted-core/twisted-core-13.0.0-r3.ebuild,v 1.1 2013/08/27 17:11:45 mgorny Exp $
 
 EAPI=5
 PYTHON_COMPAT=( python{2_6,2_7} )
@@ -89,15 +89,15 @@ python_test() {
 python_install() {
 	distutils-r1_python_install
 
-	local PYTHON_SITEDIR
-	python_export PYTHON_SITEDIR
+	cd "${D%/}$(python_get_sitedir)" || die
 
-	# Bug 299736
-	local pyver=$("${PYTHON}" -c 'import sys; print("%d.%d" % sys.version_info[:2])')
-	touch "${D%/}${PYTHON_SITEDIR}/Twisted-${PV}-py${pyver}.egg-info"
+	# create 'Twisted' egg wrt bug #299736
+	local egg=( Twisted_Core*.egg-info )
+	[[ -f ${egg[0]} ]] || die "Twisted_Core*.egg-info not found"
+	ln -s "${egg[0]}" "${egg[0]/_Core/}" || die
 
 	# own the dropin.cache so we don't leave orphans
-	touch "${D%/}${PYTHON_SITEDIR}/twisted/plugins/dropin.cache" || die
+	touch twisted/plugins/dropin.cache || die
 }
 
 python_install_all() {
