@@ -1,6 +1,12 @@
 # ChangeLog for dev-python/twisted-core
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/twisted-core/ChangeLog,v 1.7 2013/08/26 01:32:52 floppym Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/twisted-core/ChangeLog,v 1.8 2013/08/27 17:11:45 mgorny Exp $
+
+*twisted-core-13.0.0-r3 (27 Aug 2013)
+
+  27 Aug 2013; Michał Górny <mgorny@gentoo.org> +twisted-core-13.0.0-r3.ebuild,
+  -twisted-core-13.0.0-r2.ebuild:
+  Symlink the real egg-info file instead of creating a dummy one.
 
   26 Aug 2013; Mike Gilbert <floppym@gentoo.org> twisted-core-13.0.0-r2.ebuild:
   Make previous change PyPy-compatible.
